# plus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  MANIFEST.in  README.md  analyze_GPU.py  cpp_class_diagram.drawio  environment.yml  performance_tester.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  sim_tester.py
.github/workflow/: deploy-docs.yml
Tesjes/: DMI_DW-test.py  LLtorque-test.py  MRAM-bit.py  afm-exchange-test.py  anisotropy-test.py  exchange-test.py
docs/: .gitignore  api.rst  conf.py  examples.rst  index.rst  install.rst  langevin.rst  modules.rst  mumax5.engine.rst  mumax5.rst  shapes.rst  stdp4.rst  tutorial.rst  util.rst  voronoi.rst
docs/_api/: mumax5.Ferromagnet.rst  mumax5.Grid.rst  mumax5.Table.rst  mumax5.TimeSolver.rst  mumax5.Variable.rst  mumax5.World.rst
docs/_static/: custom.css
docs/examples/: magnetoelastics.rst  stdp2.rst  voronoi.rst
docs/tutorial/: langevin.rst  magnetization.rst  stdp4.rst
examples/: Bloch_wall.py  DW_rigid_strain_SAW.py  Heisenberg_exchange_spiral.py  Heisenberg_exchange_spiral_afm.py  LLtorque.py  MRAM_bit_switch.py  anisotropy.py  antiferromagnetic-resonance.py  bench.py  electricpotential.py  errorscaling.py  first_steps.ipynb  interfacialdmi.py  langevin.ipynb  langevin.py  magnetization_configurations.ipynb  magnetoelastic.py  magnetoelastic_dispersion.py  magnetoelastic_dispersion_afm.py  mfm.py  multilayer.py  periodic_bc.py  poissonsolver.py  pure_elastic.py  regions.ipynb  shape.ipynb  skyrmion_excitation.py  skyrmionracetrack.py  spinwave_dispersion.py  spinwave_dispersion_afm.py  standardproblem2.py  standardproblem3.py  standardproblem4.ipynb  standardproblem4.py  standardproblem5.py  temperature.py  test.py  voronoi.py
mumax5/: __init__.py  antiferromagnet.py  dmitensor.py  ferromagnet.py  fieldquantity.py  grid.py  magnet.py  magnetfield.py  parameter.py  poissonsolver.py  poissonsystem.py  scalarquantity.py  strayfield.py  timesolver.py  variable.py  world.py
mumax5/util/: __init__.py  config.py  constants.py  formulary.py  shape.py  show.py
mumaxplus/: __init__.py  antiferromagnet.py  dmitensor.py  ferromagnet.py  fieldquantity.py  grid.py  interparameter.py  magnet.py  ncafm.py  ncantiferromagnet.py  parameter.py  poissonsystem.py  scalarquantity.py  strayfield.py  timesolver.py  traction.py  variable.py  world.py
mumaxplus/util/: __init__.py  config.py  constants.py  formulary.py  mfm.py  shape.py  show.py  voronoi.py
src/bindings/: CMakeLists.txt  cast.hpp  ferromagnet.cpp  field.cpp  fieldToArray.hpp  grid.cpp  main.cpp  quantity.cpp  timesolver.cpp  variable.cpp  world.cpp  wrap_antiferromagnet.cpp  wrap_debug.cpp  wrap_dmitensor.cpp  wrap_ferromagnet.cpp  wrap_field.cpp  wrap_fieldquantity.cpp  wrap_grid.cpp  wrap_linsolver.cpp  wrap_magnet.cpp  wrap_magnetfield.cpp  wrap_mfm.cpp  wrap_ncafm.cpp  wrap_ncantiferromagnet.cpp  wrap_parameter.cpp  wrap_poissonsolver.cpp  wrap_poissonsystem.cpp  wrap_quantity.cpp  wrap_scalarquantity.cpp  wrap_strayfield.cpp  wrap_system.cpp  wrap_table.cpp  wrap_timesolver.cpp  wrap_traction.cpp  wrap_variable.cpp  wrap_voronoi.cpp  wrap_world.cpp  wrappers.hpp
src/cmd/: CMakeLists.txt  examples.hpp  main.cpp  spinwave_dispersion.cpp  standard_problem4.cpp
src/core/: CMakeLists.txt  anisotropy.cu  average.cpp  average.hpp  bufferpool.cu  bufferpool.hpp  butchertableau.cpp  butchertableau.hpp  cudalaunch.hpp  cudastream.cu  datatypes.h  datatypes.hpp  dynamic_parameter.cpp  dynamic_parameter.hpp  dynamicequation.cpp  dynamicequation.hpp  effectivefield.cu  effectivefield.hpp  eulerstepper.cpp  eulerstepper.hpp  exchange.cu  ferromagnet.cpp  ferromagnet.hpp  field.cu  field.hpp  fieldops.cu  fieldops.hpp  fieldquantity.cpp  fieldquantity.hpp  gpubuffer.cu  gpubuffer.hpp  grid.cu  grid.hpp  handler.hpp  inter_parameter.cu  inter_parameter.hpp  linsolver.cpp  linsolver.hpp  linsystem.cu  linsystem.hpp  (+29 more)
src/cudautil/: CMakeLists.txt  cudaerror.hpp  cudalaunch.hpp  cudastream.cu  cudastream.hpp  gpubuffer.cu  gpubuffer.hpp  gpumemorypool.cu  gpumemorypool.hpp
src/linsolver/: CMakeLists.txt  linsolver.cpp  linsolver.hpp  linstepper.cpp  linsystem.cu  linsystem.hpp  vec.cu  vec.hpp
src/physics/: CMakeLists.txt  afmexchange.cu  afmexchange.hpp  anisotropy.cu  anisotropy.hpp  antiferromagnet.cpp  antiferromagnet.hpp  antiferromagnetquantity.cpp  antiferromagnetquantity.hpp  conductivitytensor.cu  conductivitytensor.hpp  constants.hpp  demag.cpp  demag.cu  demag.hpp  demagconvolution.cu  demagconvolution.hpp  demagkernel.cu  demagkernel.hpp  dmi.cu  dmi.hpp  dmitensor.cpp  dmitensor.hpp  effectivefield.cpp  effectivefield.hpp  elasticdamping.cu  elasticdamping.hpp  elasticenergies.cu  elasticenergies.hpp  elasticforce.cu  elasticforce.hpp  elasticity.cu  elasticity.hpp  elastodynamics.cu  elastodynamics.hpp  electricalpotential.cu  electricalpotential.hpp  energy.cpp  energy.cu  energy.hpp  (+93 more)
src/timesolver/: CMakeLists.txt  butchertableau.cpp  butchertableau.hpp  dynamicequation.cpp  dynamicequation.hpp  rungekutta.cpp  rungekutta.hpp  stepper.cpp  timesolver.cpp  timesolver.hpp
test/: exact_Nxx_3D.npy  exact_Nxx_aspect.npy  exact_Nxy_3D.npy  exact_Nxy_aspect.npy  test_DMI_1D_afm.py  test_DMI_1D_ncafm.py  test_DMI_2D_afm.py  test_DMI_2D_ncafm.py  test_DMI_3D_afm.py  test_DMI_3D_ncafm.py  test_PBC.py  test_PBC_interface.py  test_angle_ncafm.py  test_anisotropy.py  test_average.py  test_boundaries.py  test_boundaries_afm.py  test_boundary_traction.py  test_conductivitytensor.py  test_demag.py  test_domain_wall_afm.py  test_elastic_acceleration.py  test_elastic_energies.py  test_elastic_energy.py  test_elasticforce.py  test_elasticforce_uniform_c.py  test_exchange.py  test_exchange_afm.py  test_exchange_ncafm.py  test_ferromagnet.py  test_free_layer_thickness.py  test_frozenspins.py  test_full_magnetization.py  test_geometry.py  test_grid.py  test_interfacialdmi.py  test_is_sublattice.py  test_kinetic_energy.py  test_local_dmi.py  test_magnetfields.py  (+18 more)
test/cpp/: CMakeLists.txt  sandbox.cpp
test/mumax3/: mumax3.py  (+11 more)
(+151 files in other folders)
