[tool.black]
target-version = ['py37', 'py38']
force-exclude = '''
(
  /(
      \.git
      | build
      | examples
      | docs
      | src/bindings/pybind11
  )/
)
'''

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-ra -q --verbose'
testpaths = ['test']
[build-system]
requires = ["setuptools", "cmake"]
